[tool.poetry]
name = "rans-calibration"
version = "0.1.0"
description = "Tools for claibrating RANS models"
authors = ["prakash <prakash.mohan@nrel.gov>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
emcee = "^3.1.6"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
h5py = "^3.11.0"
corner = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
isort = "^5.13.2"
black = "^24.4.2"


[tool.poetry.group.extras.dependencies]
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
